--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -5,5 +5,25 @@
   <%= @feed.url %>
 </p>
 
+<p>
+  <strong>Title:</strong>
+  <%= @feed.title %>
+</p>
+
+<p>
+  <strong>Description:</strong>
+  <%= @feed.description %>
+</p>
+
+<p>
+  <strong>Language:</strong>
+  <%= @feed.language %>
+</p>
+
+<p>
+  <strong>Published at:</strong>
+  <%= @feed.published_at %>
+</p>
+
 <%= link_to 'Edit', edit_feed_path(@feed) %> |
 <%= link_to 'Back', feeds_path %>
