--- a/app/views/feeds/index.html.erb
+++ b/app/views/feeds/index.html.erb
@@ -6,6 +6,11 @@
   <thead>
     <tr>
       <th>Url</th>
+      <th>Title</th>
+      <th>Description</th>
+      <th>Language</th>
+      <th>Published at</th>
+      <th>Feed</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -14,6 +19,10 @@
     <% @feeds.each do |feed| %>
       <tr>
         <td><%= feed.url %></td>
+        <td><%= feed.title %></td>
+        <td><%= feed.description %></td>
+        <td><%= feed.language %></td>
+        <td><%= feed.published_at %></td>
         <td><%= link_to 'Show', feed %></td>
         <td><%= link_to 'Edit', edit_feed_path(feed) %></td>
         <td><%= link_to 'Destroy', feed, method: :delete, data: { confirm: 'Are you sure?' } %></td>
