Add primitive index view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,18 @@
   </head>
 
   <body>
-    <%= yield %>
+    <table id="gr-main">
+      <tr>
+        <table id="gr-header">
+          <tr>
+            <th>GReader</th>
+          </tr>
+        </table>
+      </tr>
+
+      <tr>
+        <%= yield %>
+      </tr>
+    </table>
   </body>
 </html>
