--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,50 +1,60 @@
+// body {
+//   background-color: #fff;
+//   color: #333;
+//   margin: auto auto 0;
+//   max-width: 1200px;
+//   font-family: verdana, arial, helvetica, sans-serif;
+//   font-size: 13px;
+//   line-height: 18px;
+// }
+
 body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+    background-color: #fff;
+    color: #333;
+    margin: auto auto 0;
+    max-width: 1200px;
+    font-family: verdana, arial, helvetica, sans-serif;
+    font-size: 13px;
 }
 
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-}
+// p, ol, ul, td {
+//   font-family: verdana, arial, helvetica, sans-serif;
+//   font-size: 13px;
+//   line-height: 18px;
+// }
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
+// pre {
+//   background-color: #eee;
+//   padding: 10px;
+//   font-size: 11px;
+// }
 
-a {
-  color: #000;
+// a {
+//   color: #000;
 
-  &:visited {
-    color: #666;
-  }
+//   &:visited {
+//     color: #666;
+//   }
 
-  &:hover {
-    color: #fff;
-    background-color: #000;
-  }
-}
+//   &:hover {
+//     color: #fff;
+//     background-color: #000;
+//   }
+// }
 
-th {
-  padding-bottom: 5px;
-}
+// th {
+//   padding-bottom: 5px;
+// }
 
-td {
-  padding: 0 5px 7px;
-}
+// td {
+//   padding: 0 5px 7px;
+// }
 
-div {
-  &.field, &.actions {
-    margin-bottom: 10px;
-  }
-}
+// div {
+//   &.field, &.actions {
+//     margin-bottom: 10px;
+//   }
+// }
 
 #notice {
   color: green;
@@ -81,4 +91,48 @@ div {
 
 label {
   display: block;
+}
+
+#gr-body {
+    background-color: #F8F8F8;
+}
+
+#gr-header {
+    background: lightblue;
+}
+
+th {
+    padding-top: 4px;
+    padding-bottom: 4px;
+}
+
+.item.odd {
+    background-color: #EEE;
+}
+.item {
+    .item-number {
+        color: lighten(#333, 33);
+    }
+
+    .item-title {
+        a {
+            text-decoration: none;
+        }
+    }
+
+    .item-widget {
+        color: lighten(#333, 33);
+    }
+
+    .item-details {
+        color: lighten(#333, 33);
+        a {
+            text-decoration: none;
+            color: lighten(#333, 33);
+        }
+    }
+}
+
+table {
+    width: 100%;
 }
